add fullscreen support

--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
     "npm": ">=6.14.14",
     "node": ">=14.17.5"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "wp-scripts build",
+    "start": "wp-scripts start"
+  },
   "devDependencies": {
+    "@wordpress/scripts": "^27.8.0",
+    "add": "^2.0.6",
+    "babel-plugin-angularjs-annotate": "^0.10.0",
+    "filter-entry-output-plugin": "^1.0.0",
     "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
